@@ -7,6 +7,7 @@ Changes in 1.4.2:
  o Add a int64_t parsing function, with unit tests, so we can apply Scott Lamb's fix to allow large HTTP values.
  o Use a 64-bit field to hold HTTP content-lengths.  Patch from Scott Lamb.
  o Allow regression code to build even without Python installed
+ o remove NDEBUG ifdefs from evdns.c
 
 Changes in 1.4.1-beta:
  o free minheap on event_base_free(); from Christopher Layne
@@ -32,7 +33,7 @@ Changes in 1.4.1-beta:
  o When building with GCC, use the "format" attribute to verify type correctness of calls to printf-like functions.
  o removed linger from http server socket; reported by Ilya Martynov
  o Rewrite win32.c backend to be O(n lg n) rather than O(n^2)
-	
+
 Changes in 1.4.0-beta:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
